[gd_scene load_steps=12 format=3 uid="uid://b5ottjvyi33jy"]

[ext_resource type="Script" path="res://scripts/enemy/enemy_shooting.gd" id="1_ruvkq"]

[sub_resource type="Animation" id="Animation_v2p8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bot_gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4hjd6"]
resource_name = "idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bot_gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcpav"]
resource_name = "shoot"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bot_gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0.0872665, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t76bj"]
_data = {
"RESET": SubResource("Animation_v2p8f"),
"idle": SubResource("Animation_4hjd6"),
"shoot": SubResource("Animation_qcpav")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_3c8an"]
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qnus1"]
albedo_color = Color(0.00784314, 0.0196078, 0.0392157, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_854ff"]
albedo_color = Color(0.337255, 0.32549, 0.52549, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k0j4y"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_60mgh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gudcq"]
albedo_color = Color(0.470588, 1, 0.72549, 1)

[node name="enemy_shoot" type="StaticBody3D" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02254, 0)
script = ExtResource("1_ruvkq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t76bj")
}

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.127, 0)
shape = SubResource("SphereShape3D_3c8an")

[node name="Timer" type="Timer" parent="."]

[node name="bot_gun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.488295, 0.309941, 0.0499421)

[node name="CSGBox3D" type="CSGBox3D" parent="bot_gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.561427, 1.08918, 0)
material_override = SubResource("StandardMaterial3D_qnus1")
size = Vector3(0.1, 0.234, 0.1)

[node name="CSGBox3D2" type="CSGBox3D" parent="bot_gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.56, 0.506, 0)
material_override = SubResource("StandardMaterial3D_854ff")
size = Vector3(0.154457, 0.963015, 0.211671)

[node name="RayCast3D" type="RayCast3D" parent="bot_gun"]
transform = Transform3D(0.993373, -0.114937, 2.98023e-08, 2.98023e-08, -4.37722e-08, -1, 0.114937, 0.993373, -3.06377e-08, 0.56662, 1.27052, 0)
target_position = Vector3(0, 0, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k0j4y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_60mgh")
surface_material_override/0 = SubResource("StandardMaterial3D_gudcq")

[node name="Eyes" type="Node3D" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
